  simple strings without being wrapped in an array anymore.
  
  There's a new element to be added to header or footer: "resize".
  
  The option "resizable" was dropped in favour of setting "resize"
  in "header" or "footer".
  
o ValueKnob: All children are of class ChildWidget now. This breaks the
  use of "label" option for TK.Label, had to be renamed to "title".
  
  
  TODO: startdrag and stopdrag events aren't fired in TK.Drag. This stops
  Window from un-maximizing and other things.
  
Style Changes
=============

* ValueButton: no overlay element in bar
* ValueButton: classes for bar layout changed from toolkit-[direction] to toolkit-[direction]-bar


Version 1.1: Changes since version 1.0
-----------------------------------------

New Features
============

o added MultiLevelMeter widget.

o Events can now be cancelled by returning 'false' from an event handler. When
  used for native DOM events this will make the native event handler to return
  false, aswell.

o The userset() method was added to all widgets. It is used internally whenever
  an option is changed by user interaction. It fires the 'userset' event, which
  has the same API as the 'useraction' event. The 'userset' event can be
  cancelled, in which case the option will not be set. This can be used to
  prevent or restrict user interaction.

Improvements
============

o rewrote most of the rendering path of ResponseHandle. The code
  is now more concise and supports different settings more flexibly.
  For instance, the z_handle can now be positioned in all 8 positions
  for all modes

o rewrote the mouse/touch-event handling in Toggle. In particular it now
  properly handles multiple touchpoints and should work more reliable in
  edge cases.

o The mouseevents in DragValue and ResponseHandle will now compare the button
  state between different events. When the button state changes, the drag
  action will be cancelled. This works around problems where the mouseup
  event is not received.
